--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -992,8 +992,11 @@
                 </div>
                 <div class="card-body">
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" onclick="window.location.href='/schedule/create'">
-                            <i>➕</i> Create New Schedule
+                        <button class="btn btn-primary" onclick="window.location.href='/schedule/select'">
+                            <i>🧙</i> Schedule Creation Wizard
+                        </button>
+                        <button class="btn btn-outline-primary" onclick="window.location.href='/schedule/create'">
+                            <i>➕</i> Advanced Schedule Creation
                         </button>
                         <button class="btn btn-success" onclick="window.location.href='/import-employees'">
                             <i>👤</i> Import Employees
