--- a/templates/schedule_selection.html
+++ b/templates/schedule_selection.html
@@ -225,7 +225,7 @@
             <div class="alert alert-info">
                 <h5><i class="bi bi-info-circle"></i> Before You Begin</h5>
                 <ul class="mb-0">
-                    <li>Ensure all employees are assigned to crews (A, B, C, D)</li>
+                    <li>Ensure all employees are assigned to crews (A, B, C, D) - <a href="{{ url_for('crew_list') }}" class="alert-link">View Crews</a></li>
                     <li>Have your position requirements ready</li>
                     <li>Know your desired shift start times</li>
                     <li>Schedules will respect approved time-off requests</li>
