--- a/templates/schedule_selection.html
+++ b/templates/schedule_selection.html
@@ -96,7 +96,7 @@
                         <i class="bi bi-plus-circle text-primary icon-large"></i>
                         <h4 class="card-title">Create New Schedule</h4>
                         <p class="card-text mb-4">Use the schedule wizard to create a new rotation schedule for your crews</p>
-                        <a href="/schedule/wizard" class="btn btn-primary btn-lg">
+                        <a href="/schedule/create" class="btn btn-primary btn-lg">
                             <i class="bi bi-magic"></i> Start Schedule Wizard
                         </a>
                     </div>
